<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="trackOrderVM"
            type="com.homesorderconsumer.trackorder.viewmodel.TrackOrderVM"/>

        <variable
            name="trackOrder"
            type="com.homesorderconsumer.trackorder.TrackOrder"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/submit_btn"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/track_order"
                android:textColor="@color/font_black"
                android:textSize="18sp"
                app:font="@{@string/MontserratMedium}"/>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/order_id_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/font_gray"
                            android:hint="@string/order_id"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={trackOrder.orderIncrementId}"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextInputTheme"
                            app:font="@{@string/MontserratMedium}"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/last_name_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/font_gray"
                            android:hint="@string/billing_last_name"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:text="@={trackOrder.lastName}"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextInputTheme"
                            app:font="@{@string/MontserratMedium}"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextInputTheme"
                        app:errorEnabled="true">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:backgroundTint="@color/font_gray"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:text="@={trackOrder.email}"
                            android:textColor="@android:color/black"
                            android:theme="@style/TextInputTheme"
                            app:font="@{@string/MontserratMedium}"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <Button
            android:id="@+id/submit_btn"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:onClick="@{(v) -> trackOrderVM.onClickSubmit(v,trackOrder)}"
            android:text="@string/submit"
            app:font="@{@string/MontserratMedium}"/>
    </RelativeLayout>

</layout>
